--- a/values.yaml.tmpl
+++ b/values.yaml.tmpl
@@ -1,4 +1,9 @@
 global:
+
+### Instantiate databases with seed data. Usually used in dynamic and on-prem environments.
+  #seedJobs: true
+  #certsJobs: true
+
 #### Depending on git provider use matching values
 ### for Gitlab git provider
 #  gitlabClientID: 
@@ -32,6 +37,10 @@ firebaseSecret:
 
 ### Uncomment if kubernetes cluster is RBAC enabled
 rbacEnable: true
+
+## Custom annotations for Codefresh ingress resource that override defaults
+#annotations:
+   #kubernetes.io/ingress.class: nginx-codefresh
 
 ingress:
 ### Codefresh App domain name    
