local-volumes added helper image

--- a/local-volumes/values.yaml.tmpl
+++ b/local-volumes/values.yaml.tmpl
@@ -1,6 +1,8 @@
 namePrefix: cf-
 basePath: /var/lib/codefresh
 
+helperImage: "alpine:3.8"
+
 # Enter default nodeSelector for volumes nodeAffinity - see https://kubernetes.io/docs/concepts/storage/volumes/#local 
 defaultNodeSelector:
 #  kubernetes.io/hostname: storage-node-01
