--- a/storage/local-volumes/values.yaml.tmpl
+++ b/storage/local-volumes/values.yaml.tmpl
@@ -67,3 +67,8 @@ volumes:
     storageSize: 100Gi
     nodeSelector: {}
     #  kubernetes.io/hostname: storage-node-01
+
+  chartmuseum:
+    storageSize: 8Gi
+    nodeSelector: {}
+    #  kubernetes.io/hostname: storage-node-01
